--- a/web/templates/client_file.html
+++ b/web/templates/client_file.html
@@ -263,7 +263,7 @@
                     </a>
                     <div class="dropdown-separator"></div>
                     <a href="{{ url_for('entries.redact_entries_page', client_id=client.id) }}" class="dropdown-item">
-                        <i data-lucide="shield-alert" class="icon-sm icon-inline"></i> Redact Entry
+                        <i data-lucide="shield-alert" class="icon-sm icon-inline"></i> Redaction
                     </a>
                 </div>
             </div>
