--- a/web/templates/view_redacted.html
+++ b/web/templates/view_redacted.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-<div class="card">
+<div class="card card-narrow">
     <div class="entry-header">
         <div>
             <h2><i data-lucide="shield-off" class="page-icon"></i>Redacted Entry</h2>
