--- a/web/templates/entry_forms/absence.html
+++ b/web/templates/entry_forms/absence.html
@@ -27,6 +27,7 @@
                 </div>
             </div>
         </div>
+        {% include 'components/redact_button.html' %}
     </div>
     
     <form method="POST">
