--- a/web/templates/entry_forms/communication.html
+++ b/web/templates/entry_forms/communication.html
@@ -33,6 +33,7 @@
                 </div>
             </div>
         </div>
+        {% include 'components/redact_button.html' %}
     </div>
     
     <form method="POST" id="communication-form" enctype="multipart/form-data">
