--- a/web/templates/entry_forms/session.html
+++ b/web/templates/entry_forms/session.html
@@ -31,6 +31,8 @@
                 </div>
             </div>
         </div>
+        {% set entry = session %}
+        {% include 'components/redact_button.html' %}
     </div>
     
     <form method="post">
