--- a/web/templates/view_redacted.html
+++ b/web/templates/view_redacted.html
@@ -32,8 +32,7 @@
     </div>
     
     <div class="redacted-notice">
-        <i data-lucide="shield-off" class="redacted-icon"></i>
-        <h3>This entry has been redacted</h3>
+        This entry has been redacted
     </div>
     
     <div class="redacted-metadata">
