Show dash instead of $0.00 for redacted entries in timeline INFO column

--- a/web/templates/client_file.html
+++ b/web/templates/client_file.html
@@ -398,7 +398,9 @@
                                         {% endif %}
                                     </td>
                                     <td class="text-muted">
-                                        {% if entry.class == 'session' and entry.fee %}
+                                        {% if entry.is_redacted %}
+                                            -
+                                        {% elif entry.class == 'session' and entry.fee %}
                                             ${{ "%.2f"|format(entry.fee) }}
                                         {% elif entry.class == 'communication' and entry.comm_type %}
                                             {{ entry.comm_type|capitalize }}
