Add meeting link field to client profile, auto-populate in scheduler

--- a/web/templates/entry_forms/profile.html
+++ b/web/templates/entry_forms/profile.html
@@ -251,6 +251,16 @@
             </div>
         </div>
         
+        <div class="form-row-full">
+            <div class="form-group">
+                <label for="meeting_link">Meeting Link</label>
+                <input type="url" id="meeting_link" name="meeting_link" 
+                       value="{{ profile.meeting_link if profile else '' }}"
+                       placeholder="https://meet.google.com/...">
+                <p class="help-text">Default video conferencing link for scheduling appointments</p>
+            </div>
+        </div>
+        
         <!-- Individual Session Fee Section -->
         <div class="section-divider"></div>
         <h3 class="section-heading">Individual Session Fee</h3>
