--- a/web/templates/schedule_form.html
+++ b/web/templates/schedule_form.html
@@ -117,6 +117,7 @@
             <input type="url" 
                    id="meet_link" 
                    name="meet_link" 
+                   value="{{ profile_meeting_link }}"
                    placeholder="https://meet.google.com/...">
             <p class="helper-text">Optional - for video sessions</p>
         </div>
