Schedule form: match input font size to profile, show meeting link only for videoconference

--- a/web/templates/schedule_form.html
+++ b/web/templates/schedule_form.html
@@ -111,8 +111,8 @@
             </div>
         </div>
         
-        <!-- Meeting Link (full width) -->
-        <div class="form-group">
+        <!-- Meeting Link (full width) - shown only for videoconference -->
+        <div class="form-group" id="meeting-link-group">
             <label for="meet_link">Meeting Link</label>
             <input type="url" 
                    id="meet_link" 
