Add Thunderbird email support for Linux statement sending

--- a/web/templates/settings.html
+++ b/web/templates/settings.html
@@ -716,8 +716,9 @@ details[open] .settings-section-header .arrow {
             <select id="email_method" onchange="toggleEmailFromField()">
                 <option value="mailto">Open mailto: link (works everywhere)</option>
                 <option value="applescript">Compose in Mail.app (Mac only, attaches PDF)</option>
+                <option value="thunderbird">Compose in Thunderbird (Linux/Windows, attaches PDF)</option>
             </select>
-            <small class="helper-text">AppleScript method can automatically attach the PDF statement</small>
+            <small class="helper-text">AppleScript and Thunderbird methods can automatically attach the PDF statement</small>
         </div>
         </div>  
 
